--- a/index.html
+++ b/index.html
@@ -2,15 +2,25 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="style.css">
     <title>Internet Assignment</title>
 </head>
-    <body>
-        <div id="container">
-            <div id="header">
-                <img src="globe.png" alt="globe" align="left"/>The Internet
-            </div>
+<body>
+    <div class="container">
+        <div class="header">
+            <img src="globe.png">
+            <h1>The Inter<span>net</span></h1>
         </div>
-    </body>
+        <h2>The World Wide Web</h2>
+    </div>
+    <div class="main_content">
+        <div class="side_bar">
+            <p>So, what's an<span class="red"> Internet?</span></p>
+            <p>An<span> Inter</span>connected <span>Net</span>work of computers all around the world!</p>
+            <button class="blue_button">WATCH A VIDEO</button>
+            <button class="orange_button">MORE RESORCES</button>
+        <div class="line"></div>
+        </div>
+    </div>
+</body>
 </html>
