--- a/index.html
+++ b/index.html
@@ -13,13 +13,24 @@
         </div>
         <h2>The World Wide Web</h2>
     </div>
-    <div class="main_content">
+    <div class="main">
         <div class="side_bar">
             <p>So, what's an<span class="red"> Internet?</span></p>
             <p>An<span> Inter</span>connected <span>Net</span>work of computers all around the world!</p>
             <button class="blue_button">WATCH A VIDEO</button>
             <button class="orange_button">MORE RESORCES</button>
-        <div class="line"></div>
+            <div class="line"></div>
+            <div class="reinvent">
+                <h3>Reinvent your career in just 14 weeks</h3>
+                <img src="ninja.png">
+                <button>Learn More >>></button>
+            </div>
+        </div>
+        <div class="main_content">
+            <div class="main_header">
+                <img src="home.png">
+                <h3>DNS</h3>
+            </div>    
         </div>
     </div>
 </body>
