--- a/index.html
+++ b/index.html
@@ -30,6 +30,12 @@
             <div class="main_header">
                 <img src="home.png">
                 <h3>DNS</h3>
+                <img src="phone.png" class="phone_img">
+                <div class="contact_info">
+                    <p>Mon - Fri 9 a.m. - 5 p.m.(EST)</p>
+                    <h3>855.967.3787</h3>
+                    <p>International +1.617.963.0555</p>
+                </div>
             </div>    
         </div>
     </div>
