--- a/index.html
+++ b/index.html
@@ -12,18 +12,18 @@
             <h1>The Inter<span>net</span></h1>
         </div>
         <h2>The World Wide Web</h2>
-    </div>
-    <div class="main">
-        <div class="side_bar">
-            <p>So, what's an<span class="red"> Internet?</span></p>
-            <p>An<span> Inter</span>connected <span>Net</span>work of computers all around the world!</p>
-            <button class="blue_button">WATCH A VIDEO</button>
-            <button class="orange_button">MORE RESORCES</button>
-            <div class="line"></div>
-            <div class="reinvent">
-                <h3>Reinvent your career in just 14 weeks</h3>
-                <img src="ninja.png">
-                <button>Learn More >>></button>
+        <div class="main">
+            <div class="side_bar">
+                <p>So, what's an<span class="red"> Internet?</span></p>
+                <p>An<span> Inter</span>connected <span>Net</span>work of computers all around the world!</p>
+                <button class="blue_button">WATCH A VIDEO</button>
+                <button class="orange_button">MORE RESORCES</button>
+                <div class="line"></div>
+                <div class="reinvent">
+                    <h3>Reinvent your career in just 14 weeks</h3>
+                    <img src="ninja.png">
+                    <button>Learn More >>></button>
+                </div>
             </div>
         </div>
         <div class="main_content">
@@ -33,10 +33,33 @@
                 <img src="phone.png" class="phone_img">
                 <div class="contact_info">
                     <p>Mon - Fri 9 a.m. - 5 p.m.(EST)</p>
-                    <h3>855.967.3787</h3>
+                    <h3 class="phone_number">855.967.3787</h3>
                     <p>International +1.617.963.0555</p>
                 </div>
-            </div>    
+            </div>
+            <div class="main_body">
+                <h3>Clients and Servers</h3>
+                <p>Computers connected to the <a href="">Web</a> are called <span class="bold">clients </span>and <span class="bold">servers</span></p>
+                <ul>
+                    <li><a href="">Clients</a> are typical Web user's Internet-connected devices (for example, your computer connected to your Wi-Fi, or your phone connected to your modile network) and <a href="">Web-accessing software</a> on those devices(usually a web browser like Firefox or Chrome.</span></li>
+                    <li><a href="">Servers </a>are computers that store <a href="">webpages</a>, <a href="">sites</a>, or <a href="">apps</a>. When a client device wants to access a webpage, a copy of the webpage is downloaded from the server onto the client machine to be displayed in the user's browser.</li>
+                </ul>
+                <img src="client_server.jpg">
+                <h3>So What Actually Happens</h3>
+                <ol>
+                    <li>The browser goes on the <a href="">DNS server </a>and finds the real address of the <a href="">server </a>that the website lives on.</li>
+                    <li>The browser sendserver sends an <a href="">HTTP requests </a>message to the server asking it to send a copy of the website to the client.</li>
+                    <li>If the server approves the client's request, the server sends the client a <a href="">"200 OK" message </a>which means "permission granted! Here you go!". and then starts serving the website;s files to the browser as a series of small chunks.</li>
+                    <li>The browser assenbles the small chucks onto a complete website and dsiplays it for you.</li>
+                </ol>
+            </div>  
+            <div class="footer">
+                <img src="html.png">
+                    <h3>The Big 3 - HTML, CSS, JavaScript</h3>
+                    <p class="big_3">while the server can process information in may differnet langauages, the files that they serve to the client area always going to be some combination of HTML, CSS, and JavaScript!</p>
+                    <p class="big_3">Learn more about the Big 3 <a href="">here</a>!</p>
+            </div> 
+            </div>
         </div>
     </div>
 </body>
